manifests/prod/gatus/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: svc-gatus
  labels:
    app: gatus
  namespace: app-gatus
spec:
  selector:
    app: gatus
  type: ClusterIP
  ports:
    - name: gatus
      protocol: TCP
      port: 80
      # targetPort: 80
      targetPort: http
      # nodePort: 40000
